--- a/TrainingTask/TrainingTask/PostDetailsScreen/view/PostDetailsVC/PostDetailsViewController.xib
+++ b/TrainingTask/TrainingTask/PostDetailsScreen/view/PostDetailsVC/PostDetailsViewController.xib
@@ -13,12 +13,13 @@
             <connections>
                 <outlet property="authorImage" destination="TL0-Hn-tJ6" id="BLZ-5r-Lbx"/>
                 <outlet property="authorNameLabel" destination="uvq-em-coy" id="whu-ZF-cDV"/>
+                <outlet property="postDate" destination="M41-hU-9uk" id="efO-SG-FRb"/>
                 <outlet property="postImage" destination="hGS-wM-PqX" id="NgT-IV-nbZ"/>
                 <outlet property="postTitleLabel" destination="B4y-2S-K76" id="w64-tR-dYW"/>
                 <outlet property="tagLabel" destination="zLR-1v-Pry" id="gZO-vI-o1A"/>
                 <outlet property="view" destination="B47-O8-MWz" id="TKh-z2-d9r"/>
-                <outlet property="webView" destination="Apc-nN-9pw" id="pGG-QQ-YN1"/>
-                <outlet property="webViewHeightConstraint" destination="Yku-7c-2de" id="2wx-J3-G7f"/>
+                <outlet property="webView" destination="hQ2-5W-NlP" id="mMm-V9-SeO"/>
+                <outlet property="webViewHeightConstraint" destination="yIB-ov-HZc" id="9ij-bo-3YI"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -30,7 +31,7 @@
                     <rect key="frame" x="0.0" y="100" width="393" height="718"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="qEa-jA-8ap">
-                            <rect key="frame" x="0.0" y="0.0" width="393" height="369.66666666666669"/>
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="418.66666666666669"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="236-nB-Fsz" userLabel="Title Stack View">
                                     <rect key="frame" x="0.0" y="0.0" width="393" height="75.666666666666671"/>
@@ -108,7 +109,7 @@
                                     <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
                                 </stackView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="udp-WU-5zn">
-                                    <rect key="frame" x="0.0" y="141.66666666666666" width="393" height="227.99999999999997"/>
+                                    <rect key="frame" x="0.0" y="141.66666666666663" width="393" height="277"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hGS-wM-PqX">
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="230"/>
@@ -117,11 +118,36 @@
                                                 <constraint firstAttribute="height" constant="230" id="EaF-qb-7pF"/>
                                             </constraints>
                                         </imageView>
-                                        <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Apc-nN-9pw">
-                                            <rect key="frame" x="0.0" y="220.00000000000003" width="393" height="8"/>
-                                            <color key="backgroundColor" red="0.36078431372549019" green="0.38823529411764707" blue="0.40392156862745099" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ORN-oc-7V6">
+                                            <rect key="frame" x="0.0" y="210.00000000000003" width="393" height="66.999999999999972"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M41-hU-9uk">
+                                                    <rect key="frame" x="16" y="30" width="361" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hQ2-5W-NlP">
+                                                    <rect key="frame" x="8" y="59" width="377" height="8"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="8" id="yIB-ov-HZc"/>
+                                                    </constraints>
+                                                    <wkWebViewConfiguration key="configuration">
+                                                        <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                                        <wkPreferences key="preferences"/>
+                                                    </wkWebViewConfiguration>
+                                                </wkWebView>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="8" id="Yku-7c-2de"/>
+                                                <constraint firstAttribute="bottom" secondItem="hQ2-5W-NlP" secondAttribute="bottom" id="UAB-Dj-ucJ"/>
+                                                <constraint firstAttribute="trailing" secondItem="hQ2-5W-NlP" secondAttribute="trailing" constant="8" id="VDT-HF-wt0"/>
+                                                <constraint firstAttribute="trailing" secondItem="M41-hU-9uk" secondAttribute="trailing" constant="16" id="eI8-LH-mVJ"/>
+                                                <constraint firstItem="M41-hU-9uk" firstAttribute="leading" secondItem="ORN-oc-7V6" secondAttribute="leading" constant="16" id="mpa-jy-SBI"/>
+                                                <constraint firstItem="M41-hU-9uk" firstAttribute="top" secondItem="ORN-oc-7V6" secondAttribute="top" constant="30" id="nn6-2f-4Hc"/>
+                                                <constraint firstItem="hQ2-5W-NlP" firstAttribute="leading" secondItem="ORN-oc-7V6" secondAttribute="leading" constant="8" id="qD8-ho-sG7"/>
+                                                <constraint firstItem="hQ2-5W-NlP" firstAttribute="top" secondItem="M41-hU-9uk" secondAttribute="bottom" constant="12" id="wL3-bJ-Svd"/>
                                             </constraints>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
@@ -129,17 +155,17 @@
                                                     <integer key="value" value="20"/>
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
-                                        </webView>
+                                        </view>
                                     </subviews>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="Apc-nN-9pw" secondAttribute="bottom" id="Q6p-Ty-kxW"/>
+                                        <constraint firstAttribute="bottom" secondItem="ORN-oc-7V6" secondAttribute="bottom" id="AzC-EX-Rnx"/>
+                                        <constraint firstAttribute="trailing" secondItem="ORN-oc-7V6" secondAttribute="trailing" id="J9d-NS-pMB"/>
                                         <constraint firstItem="hGS-wM-PqX" firstAttribute="top" secondItem="udp-WU-5zn" secondAttribute="top" id="VPE-FL-Dmn"/>
-                                        <constraint firstItem="Apc-nN-9pw" firstAttribute="top" secondItem="hGS-wM-PqX" secondAttribute="bottom" constant="-10" id="aXb-Mw-TIE"/>
                                         <constraint firstAttribute="trailing" secondItem="hGS-wM-PqX" secondAttribute="trailing" id="b9G-5S-6ng"/>
-                                        <constraint firstItem="Apc-nN-9pw" firstAttribute="leading" secondItem="udp-WU-5zn" secondAttribute="leading" id="c3j-y3-DqQ"/>
+                                        <constraint firstItem="ORN-oc-7V6" firstAttribute="leading" secondItem="udp-WU-5zn" secondAttribute="leading" id="gfd-YY-i31"/>
+                                        <constraint firstItem="ORN-oc-7V6" firstAttribute="top" secondItem="hGS-wM-PqX" secondAttribute="bottom" constant="-20" id="j7C-ZM-9HZ"/>
                                         <constraint firstItem="hGS-wM-PqX" firstAttribute="leading" secondItem="udp-WU-5zn" secondAttribute="leading" id="tEA-aO-IGz"/>
-                                        <constraint firstAttribute="trailing" secondItem="Apc-nN-9pw" secondAttribute="trailing" id="ukc-g9-Y4D"/>
                                     </constraints>
                                 </view>
                             </subviews>
