--- a/TrainingTask/TrainingTask/ForYouScreen/view/ForYouVC/ForYouViewController.xib
+++ b/TrainingTask/TrainingTask/ForYouScreen/view/ForYouVC/ForYouViewController.xib
@@ -13,7 +13,7 @@
             <connections>
                 <outlet property="activityIndicator" destination="qRd-6y-u4p" id="SLA-mn-bdj"/>
                 <outlet property="filtersContainer" destination="aqt-tl-hry" id="8CM-O4-oUO"/>
-                <outlet property="postsTableView" destination="6nP-u3-8yF" id="rJD-sX-Psn"/>
+                <outlet property="postsContainer" destination="MDg-ba-i74" id="Xtu-VT-7yE"/>
                 <outlet property="view" destination="SLp-Te-qIG" id="2C6-9f-o41"/>
             </connections>
         </placeholder>
@@ -32,23 +32,23 @@
                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="qRd-6y-u4p">
                     <rect key="frame" x="178" y="407.66666666666669" width="37" height="37"/>
                 </activityIndicatorView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="6nP-u3-8yF">
-                    <rect key="frame" x="0.0" y="188" width="393" height="656"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MDg-ba-i74" userLabel="Posts Container">
+                    <rect key="frame" x="0.0" y="188" width="393" height="622"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                </tableView>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="0Px-Mh-MdA"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="6nP-u3-8yF" secondAttribute="bottom" constant="8" id="Gvo-bV-csK"/>
-                <constraint firstItem="6nP-u3-8yF" firstAttribute="top" secondItem="aqt-tl-hry" secondAttribute="bottom" id="IrV-ui-7lc"/>
+                <constraint firstItem="0Px-Mh-MdA" firstAttribute="trailing" secondItem="MDg-ba-i74" secondAttribute="trailing" id="1pk-m4-rer"/>
+                <constraint firstItem="MDg-ba-i74" firstAttribute="top" secondItem="aqt-tl-hry" secondAttribute="bottom" id="DGX-ub-Wjr"/>
                 <constraint firstItem="0Px-Mh-MdA" firstAttribute="trailing" secondItem="aqt-tl-hry" secondAttribute="trailing" constant="8" id="QkY-bj-tLf"/>
-                <constraint firstItem="0Px-Mh-MdA" firstAttribute="trailing" secondItem="6nP-u3-8yF" secondAttribute="trailing" id="SGh-Wy-FwA"/>
                 <constraint firstItem="qRd-6y-u4p" firstAttribute="centerX" secondItem="SLp-Te-qIG" secondAttribute="centerX" id="TBj-3E-m6i"/>
                 <constraint firstItem="aqt-tl-hry" firstAttribute="top" secondItem="SLp-Te-qIG" secondAttribute="top" constant="100" id="dm3-uP-kmu"/>
                 <constraint firstItem="qRd-6y-u4p" firstAttribute="centerY" secondItem="SLp-Te-qIG" secondAttribute="centerY" id="fCV-wm-ddG"/>
-                <constraint firstItem="6nP-u3-8yF" firstAttribute="leading" secondItem="0Px-Mh-MdA" secondAttribute="leading" id="fFz-JX-Dnk"/>
                 <constraint firstItem="aqt-tl-hry" firstAttribute="leading" secondItem="0Px-Mh-MdA" secondAttribute="leading" constant="8" id="ji4-Rw-CEl"/>
+                <constraint firstItem="MDg-ba-i74" firstAttribute="leading" secondItem="0Px-Mh-MdA" secondAttribute="leading" id="med-9c-mAf"/>
+                <constraint firstItem="0Px-Mh-MdA" firstAttribute="bottom" secondItem="MDg-ba-i74" secondAttribute="bottom" constant="8" id="qp5-Xs-c9V"/>
             </constraints>
             <point key="canvasLocation" x="-329" y="-52"/>
         </view>
