--- a/TrainingTask/TrainingTask/PostsTableView/view/postTableViewCell/PostTableViewCell.xib
+++ b/TrainingTask/TrainingTask/PostsTableView/view/postTableViewCell/PostTableViewCell.xib
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostTableViewCell" rowHeight="240" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="TrainingTask" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="602" height="240"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostTableViewCell" rowHeight="267" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="TrainingTask" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="602" height="267"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="602" height="240"/>
+                <rect key="frame" x="0.0" y="0.0" width="602" height="267"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DOZ-Se-sUo">
-                        <rect key="frame" x="0.0" y="0.0" width="602" height="228"/>
+                        <rect key="frame" x="0.0" y="0.0" width="602" height="255"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="n5Q-g3-tBZ">
                                 <rect key="frame" x="0.0" y="0.0" width="602" height="175"/>
@@ -28,16 +28,16 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Post Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="abo-gd-f4A">
-                                <rect key="frame" x="12" y="193" width="578" height="20.333333333333343"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="12" y="191" width="578" height="20.333333333333343"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.32266995310000002" green="0.37195962669999999" blue="0.51584303379999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
-                            <constraint firstItem="abo-gd-f4A" firstAttribute="top" secondItem="n5Q-g3-tBZ" secondAttribute="bottom" constant="18" id="5xM-wK-MOf"/>
-                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="abo-gd-f4A" secondAttribute="bottom" constant="14" id="KOE-IT-grc"/>
+                            <constraint firstItem="abo-gd-f4A" firstAttribute="top" secondItem="n5Q-g3-tBZ" secondAttribute="bottom" constant="16" id="5xM-wK-MOf"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="abo-gd-f4A" secondAttribute="bottom" constant="20" id="KOE-IT-grc"/>
                             <constraint firstAttribute="trailing" secondItem="n5Q-g3-tBZ" secondAttribute="trailing" id="OVG-9C-9rX"/>
                             <constraint firstItem="n5Q-g3-tBZ" firstAttribute="leading" secondItem="DOZ-Se-sUo" secondAttribute="leading" id="Rho-uJ-c8U"/>
                             <constraint firstItem="abo-gd-f4A" firstAttribute="leading" secondItem="DOZ-Se-sUo" secondAttribute="leading" constant="12" id="biY-pu-X5i"/>
@@ -58,7 +58,7 @@
                 <outlet property="postImage" destination="n5Q-g3-tBZ" id="Hzw-BB-mtz"/>
                 <outlet property="postTitle" destination="abo-gd-f4A" id="L9f-NE-AlT"/>
             </connections>
-            <point key="canvasLocation" x="-172.51908396946564" y="57.74647887323944"/>
+            <point key="canvasLocation" x="-172.51908396946564" y="67.25352112676056"/>
         </tableViewCell>
     </objects>
     <resources>
